--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
         run:  npm install  
 
       - name: iniciar o servidor de mocks
-        run:  npm run mock-server  
+        run:  npm run mock-server  &
 
       - name: iniciar o servidor da aplicação
-        run:  npm run server 
+        run:  npm run server  &
         
       - name: Executar os testes
         run:  npx cypress run    
