--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,18 @@ jobs:
         run:  npm run server  &
         
       - name: Executar os testes
-        run:  npx cypress run    
+        run:  npx cypress run
+        
+      - name: Gerar relatório HTML com mochawesome
+        run: |
+          npx mochawesome-merge cypress/reports/*.json > mochawesome.json
+          npx mochawesome-report-generator mochawesome.json -o mochawesome-report
+
+      - name: Fazer upload do relatório como artefato
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-report
+          path: mochawesome-report
 
 
 
